Final push before first launch

--- a/home.html
+++ b/home.html
@@ -102,6 +102,19 @@
                             </div>
                         </div>
                         <div class="people">
+                            <img class="people_images" id="lead_game_designer_and_game_programmer" src="assets/aung_khant.png" alt="Aung Khant">
+                            <div class="lead_game_designer_and_game_programmer_information">
+                                <p class="name_titles" id="lead_game_designer_and_game_programmer_name">Lead Game Designer and Programmer Aung Khant</p>
+                                <div class="information_section">
+                                    <p class="information_text" id="lead_game_designer_and_game_programmer_information">
+                                        Lead Game Designer and Programmer with expertise in Unreal Engine and Unity. Focusing on the technical details of Game Design to make sure it provides a fun and interesting experience for players.
+                                    </p>
+                                    <a href="https://www.linkedin.com/in/aung-khant-809539225/"><p class="information_social_media"><i class="lni lni-linkedin"></i></p></a>
+                                    <a href="https://sites.google.com/view/aungkhant/portfolio-main"><p class="information_social_media"><i class="lni lni-website"></i></p></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="people">
                             <img class="people_images" id="lead_programmer_1" src="assets/weixiao_liang.png" alt="Weixiao Liang">
                             <div class="lead_programmer_1_information">
                                 <p class="name_titles" id="lead_programmer_1_name">Lead Programmer Weixiao Liang</p>
