--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <a href="home.html">
                     <img id="shameless_product_placement_logo" src="assets/shameless_product_placement_logo.png" alt="Shameless Product Placement Logo">
                 </a>
-                <a href="#">
+                <a href="merchandise.html">
                     <img id="shih_zoo_merchandise" src="assets/shih_zoo_merchandise_icon.png" alt="Shih Zoo Merchandise">
                 </a>
                 <img id="shih_tzu" src="assets/shih_tzu.gif" alt="Shih Tzu">
