--- a/home.html
+++ b/home.html
@@ -42,7 +42,7 @@
                         >
                         <source
                             src="assets/shameless_product_placement_logo.mov"
-                            type="video/mp4"; codecs="hvc1"
+                            type="video/mp4"; codecs="quicktime"
                         >
                     </video>
                 </a>
