Attempting to fix Safari animation 2

--- a/home.html
+++ b/home.html
@@ -37,12 +37,12 @@
                 <a href="home.html">
                     <video id="shameless_product_placement_logo" preload="auto" autoplay loop muted>
                         <source
-                            src="assets/shameless_product_placement_logo.webm"
-                            type="video/webm"
+                            src="assets/shameless_product_placement_logo.mov"
+                            type="video/mp4"; codecs="hvc1"
                         >
                         <source
-                            src="assets/shameless_product_placement_logo.mov"
-                            type="video/mp4"; codecs="quicktime"
+                            src="assets/shameless_product_placement_logo.webm"
+                            type="video/webm"
                         >
                     </video>
                 </a>
