Attempting to fix Safari animation 4

--- a/home.html
+++ b/home.html
@@ -37,8 +37,8 @@
                 <a href="home.html">
                     <video id="shameless_product_placement_logo" preload="auto" autoplay loop muted>
                         <source
-                            src="assets/shameless_product_placement_logo.mov"
-                            type="video/mov"; codecs="hvc1"
+                            src="assets/shameless_product_placement_logo.mp4"
+                            type="video/mp4"
                         >
                         <source
                             src="assets/shameless_product_placement_logo.webm"
