--- a/home.html
+++ b/home.html
@@ -38,7 +38,7 @@
                     <video id="shameless_product_placement_logo" preload="auto" autoplay loop muted>
                         <source
                             src="assets/shameless_product_placement_logo.mov"
-                            type="video/mp4"; codecs="hvc1"
+                            type="video/mp4; codecs=hvc1"
                         >
                         <source
                             src="assets/shameless_product_placement_logo.webm"
