--- a/home.html
+++ b/home.html
@@ -40,7 +40,10 @@
                             src="assets/shameless_product_placement_logo.mov"
                             type="video/quicktime; codecs=hevc"
                         >
-                        
+                        <source
+                            src="assets/shameless_product_placement_logo.gif"
+                            type="video/gif"
+                        >
                     </video>
                 </a>
                 <div class="scroll">
