--- a/home.html
+++ b/home.html
@@ -35,16 +35,7 @@
             <img id="background_video_alternative" src="assets/home_background.png">
             <div class="home_details">
                 <a href="home.html">
-                    <video id="shameless_product_placement_logo" preload="auto" autoplay loop muted>
-                        <source
-                            src="assets/shameless_product_placement_logo.mov"
-                            type="video/quicktime; codecs=hevc"
-                        >
-                        <source
-                            src="assets/shameless_product_placement_logo.gif"
-                            type="video/gif"
-                        >
-                    </video>
+                    <img id="shameless_product_placement_logo" src="assets/shameless_product_placement_logo.gif">
                 </a>
                 <div class="scroll">
                     <a id="scroll" href="#scrollable_area"><img id="down_arrow" src="assets/down_arrow.png" alt="Down Arrow"></a>
