--- a/sponsor.html
+++ b/sponsor.html
@@ -49,18 +49,26 @@
                 <div id="sponsor_information">
                     <p id="sponsor_title">Revolutionizing In-Game Advertising</p>
                     <div class="sponsor_information_part_1">
-                        <p id="sponsor_details_part_1">
-                            Shameless Product Placement is the latest innovation in advertising, transforming the way brands connect with elusive audiences. We partner with brands and advertisers to integrate virtual ads seamlessly within our games, eliminating the notion that ads are to be skipped. When advertisements are a core part of the gameplay, they become part of the fun!<br><br>
-                            Sponsoring Shameless Product Placement provides a unique opportunity to significantly boost your brand's visibility and market presence through strategic in-game marketing. By partnering with us, your company will benefit from integrated product placements in the games of your choice, reaching a vast audience of engaged gamers who align with your target demographic.
-                        </p>
+                        <div class="sponsor_information_text">
+                            <p id="sponsor_titles_part_1">Tired of ads being skipped?</p>
+                            <p id="sponsor_details_part_1">Imagine a world where your brand becomes part of the fun, seamlessly integrated into captivating gameplay. Shameless Product Placement makes this a reality.<br></p>
+                            <p id="sponsor_titles_part_1">Unlock unprecedented brand visibility & engagement.</p>
+                            <p id="sponsor_details_part_1">Reach a massive audience of engaged gamers who perfectly match your target demographic, fostering a direct connection that transcends traditional advertising.<br></p>
+                            <p id="sponsor_titles_part_1">Introducing Shih Zoo, your brand's next big stage.</p>
+                            <p id="sponsor_details_part_1">This captivating game offers countless opportunities for seamless product placement. Choose your ideal in-game location, upload custom artwork, and see your vision come to life.<br></p>
+                        </div>
                         <img id="sponsor_example_1" src="assets/sponsor_example_1.png" alt="Sponsor Example 1">
                     </div>
                     <div class="sponsor_information_part_2">
                         <img id="sponsor_example_2" src="assets/sponsor_example_2.png" alt="Sponsor Example 2">
-                        <p id="sponsor_details_part_2">
-                            This collaboration not only enhances brand awareness but also fosters a direct connection with consumers in an interactive and immersive environment. Through tailored marketing strategies and creative placements, your product will be showcased naturally and effectively, ensuring maximum impact and recall among gamers. Embrace this opportunity to elevate your brand's visibility and market influence with Shameless Product Placement, where effective marketing meets interactive entertainment seamlessly.<br><br>
-                            Become a sponsor today, and we'll place your product in our latest game, Shih Zoo. You can choose exactly where in the game you want to appear, upload custom artwork, and provide specific instructions for implementation. We even offer a <a id="free_trial_redirect" href="#sponsor_contact_button">free trial</a> to show you what your product or advertisement will look like in our creations. For inquiries, or if you have any unique ideas, contact us— because the possibilities are endless!
-                        </p>
+                        <div class="sponsor_information_text">
+                            <p id="sponsor_titles_part_2">Worried about the fit?</p>
+                            <p id="sponsor_details_part_2">Our free trial lets you experience your product in action before committing, guaranteeing a seamless integration that amplifies your message.<br></p>
+                            <p id="sponsor_titles_part_2">Unmatched value.</p>
+                            <p id="sponsor_details_part_2">With flexible packages and transparent pricing, Shameless Product Placement offers an unbeatable ROI for your marketing budget.<br></p>
+                            <p id="sponsor_titles_part_2">The future of advertising is here, and the early adopters are reaping the rewards.</p>
+                            <p id="sponsor_details_part_2">Don't miss out on this game-changing opportunity. Contact us today, and let's elevate your brand together. The possibilities are endless!<br></p>
+                        </div>
                     </div>
                 </div>
             </div>
