Added new employee assets and descriptions

--- a/home.html
+++ b/home.html
@@ -127,6 +127,43 @@
                             </div>
                         </div>
                         <div class="people">
+                            <img class="people_images" id="lead_programmer_2" src="assets/henry_orsagh.png" alt="Henry Orsagh">
+                            <div class="lead_programmer_2_information">
+                                <p class="name_titles" id="lead_programmer_2_name">Lead Programmer Henry Orsagh</p>
+                                <div class="information_section">
+                                    <p class="information_text" id="lead_programmer_2_information">
+                                        Game Programmer with a Bachelors in Game Design and Development from Rochester Institute of Technology. Well-versed in C# and C++, and proficient in both Unreal and Unity. Specializing in minigame design and development.
+                                    </p>
+                                    <a href="https://www.linkedin.com/in/henry-orsagh/"><p class="information_social_media"><i class="lni lni-linkedin"></i></p></a>
+                                    <a href="https://horsagh.github.io/portfolio/"><p class="information_social_media"><i class="lni lni-website"></i></p></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="people">
+                            <img class="people_images" id="lead_programmer_3" src="assets/aurora_rodriguez.png" alt="Aurora Rodríguez">
+                            <div class="lead_programmer_3_information">
+                                <p class="name_titles" id="lead_programmer_3_name">Lead Programmer Aurora Rodríguez</p>
+                                <div class="information_section">
+                                    <p class="information_text" id="lead_programmer_3_information">
+                                        Game Developer specializing in Unity (2D & 3D) focusing on creating robust core systems and delivering interactive experiences that are both engaging and meaningful.
+                                    </p>
+                                    <a href="https://www.linkedin.com/in/aurora-rodr%C3%ADguez-66a331158/"><p class="information_social_media"><i class="lni lni-linkedin"></i></p></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="people">
+                            <img class="people_images" id="lead_programmer_4" src="assets/scout_miller.png" alt="Scout Miller">
+                            <div class="lead_programmer_4_information">
+                                <p class="name_titles" id="lead_programmer_4_name">Lead Programmer Scout Miller</p>
+                                <div class="information_section">
+                                    <p class="information_text" id="lead_programmer_4_information">
+                                        Programmer and Technical Designer with expertise in Unreal and Unity. Focusing on rapid prototyping and gameplay engineering to ensure a smooth and enjoyable player experience.
+                                    </p>
+                                    <a href="https://www.linkedin.com/in/scoutm/"><p class="information_social_media"><i class="lni lni-linkedin"></i></p></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="people">
                             <img class="people_images" id="lead_2d_artist_1" src="assets/max_whitmore.png" alt="Max Whitmore">
                             <div class="lead_2d_artist_1_information">
                                 <p class="name_titles" id="lead_2d_artist_1_name">Lead 2D Artist Max Whitmore</p>
